sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:6: error: ')' expected but '<-' found.
    for ((j<- 0 to i).reverse) {
           ^AlgInsertionSort:10: error: '<-' expected but '}' found.
  }
  ^